Project SimpleBank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple bank Database
    **markdown content here**
  '''
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [not null, unique]
  is_email_verified bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}

Table verify_emails as V {
  id bigserial [pk]
  username varchar [ref: > U.username, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null, default: false]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
  created_at timestamptz [not null, default: `now()`]
}

Table accounts as A {
  id bigserial [pk] // auto-increment
  owner varchar [ref: > U.username, not null]
  balance float [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: 'now()']
  
  indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries as E {
  id bigserial [pk]
  account_id bigint [ref: > A.id, not null]
  amount float [not null, note: 'can be positive or negative']
  created_at timestamptz [not null, default: 'now()']
  
  indexes {
    account_id
  }
 }
 
Table transfers as T {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  sender varchar [ref: > U.username, not null]
  recipient varchar [ref: > U.username, not null]
  amount float [not null, note: 'must be positive']
  created_at timestamptz [not null, default: 'now()']
  
  indexes {
    (sender, from_account_id)
    (sender, to_account_id)
    (from_account_id, to_account_id)
    to_account_id
  }
 }
